AM_CFLAGS = -std=gnu99 -Wall -Wstrict-prototypes -ggdb
#AM_LDFLAGS = -ldebugp -lpthread -lcrypto

bin_PROGRAMS = fairport
fairport_SOURCES = \
						 fairport.c fairport.h \
						 control.c control.h \
						 tcp.c tcp.h \
						 alac.c alac.h \
						 session.c session.h \
						 audio.c audio.h \
						 masteraudio.c masteraudio.h \
						 debugp.c debugp.h \
						 dsp.c dsp.h \
						 constants.h
